[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Font/GOLEMNOMICON_UI/Default_UI.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/UI/StatPageUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Inventory/inventory_back_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Inventory/inventorygrid_research.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Inventory/inventory_next_arrow.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/alert_background.png" type="Texture" id=6]

[node name="StatPageUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="BookMarginContainer" type="MarginContainer" parent="."]
margin_left = 44.0
margin_top = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookBackground" type="TextureRect" parent="BookMarginContainer"]
margin_right = 384.0
margin_bottom = 216.0
texture = ExtResource( 4 )
stretch_mode = 5

[node name="LorePageTurning" type="HBoxContainer" parent="BookMarginContainer/BookBackground"]
margin_left = 60.0
margin_top = 152.0
margin_right = 324.0
margin_bottom = 161.0
custom_constants/separation = 94

[node name="BackButton" type="TextureButton" parent="BookMarginContainer/BookBackground/LorePageTurning"]
margin_right = 85.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
flip_h = true

[node name="NextButton" type="TextureButton" parent="BookMarginContainer/BookBackground/LorePageTurning"]
margin_left = 179.0
margin_right = 264.0
margin_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="LeftPage" type="TextureRect" parent="."]
margin_left = 117.0
margin_top = 65.0
margin_right = 319.0
margin_bottom = 289.0
rect_scale = Vector2( 0.5, 0.5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPage" type="RichTextLabel" parent="."]
margin_left = 254.0
margin_top = 65.0
margin_right = 458.0
margin_bottom = 287.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 1 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="TextureButton" parent="."]
margin_left = 246.0
margin_top = 179.0
margin_right = 299.0
margin_bottom = 193.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
texture_normal = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Upgrade"]
margin_right = 66.0
margin_bottom = 18.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 1 )
text = "Upgrade"
align = 1
valign = 1

[node name="InventoryChecker" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="timeout" from="InventoryChecker" to="." method="_on_InventoryChecker_timeout"]
